--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -13,7 +13,7 @@
    <header>
     <img src= "Logo.png" class="logo" alt="fake logo">
     <nav>
-        <a>Resume</a>
+        <a href="./src/myResume.html">Resume</a>
         <a>About Me</a>
         <a href="./src/blog.html">My Blog</a>
         <a class="has-border">Contact Me</a>
