copied portfolio pages over to new repo

--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -24,7 +24,7 @@
     <img src="myProfilePic.jpeg" id="profile-pic" alt="Headshot of Me">
     <h1>Hayden Garrett Robertson</h1>
     <h2>Student of Web Development</h2>
-    <button id="portfolio">Portfolio</button>.
+    <button id="portfolio"><a href="./src/Portfolio.html" target="blank">Portfolio</a></button>.
    </main>
 
   <!-- ...and here. -->
