--- a/myPortfolio/src/Portfolio.html
+++ b/myPortfolio/src/Portfolio.html
@@ -7,6 +7,8 @@
      <title>Portfolio</title>
     </head>
     <body>
-        <a href="Dashboard.html"></a>
+        <a href="./Dashboard.html">
+            Dashboard
+        </a>
     </body>
 </html>
