--- a/myPortfolio/src/Portfolio.html
+++ b/myPortfolio/src/Portfolio.html
@@ -10,5 +10,8 @@
         <a href="./Dashboard.html">
             Dashboard
         </a>
+        <a href="./hair.html">
+            hair
+        </a>
     </body>
 </html>
