--- a/myPortfolio/src/hair.html
+++ b/myPortfolio/src/hair.html
@@ -29,21 +29,21 @@
                 velit esse cillum dolore eu fugiat nulla pariatur.
             </div>
             <img src="./img/Enim.jpg" class="Enim">
-            <div>Ut enim</div>
+            <div class="ut">Ut enim</div>
             <img src="./img/Magna.jpg" class="Magna">
-            <div>dolore magna</div>
+            <div class="magna">dolore magna</div>
             <img src="./img/Dolore.jpg" class="Dolore">
-            <div>cillum dolore</div>
+            <div class="cillium">cillum dolore</div>
         </main>
         <footer>
             <div class="COPYRIGHT">
                 Copyright HGR 2020
             </div>
-            <div class="SOCIAL">
-                <img src="./Icons/Facebook.png">
-                <img src="./Icons/Twitter.png">
-                <img src="./Icons/FIre.png">
-                <img src="./Icons/Rocket.png">
+            <div>
+                <img src="./Icons/Facebook.png" class="SOCIAL">
+                <img src="./Icons/Twitter.png" class="SOCIAL">
+                <img src="./Icons/FIre.png" class="SOCIAL">
+                <img src="./Icons/Rocket.png" class="SOCIAL">
             </div>
         </footer>
     </body>
