--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./mobile-style.css">
+  <link rel="stylesheet" href="./src/styles/style.css">
   <title>My Portfolio</title>
 </head>
   <body>
   <!-- This is a what comment line looks like in HTML -->
   <!-- The rest of your code goes between here... -->
    <header>
-    <img src= "Logo.png" class="logo" alt="fake logo">
+    <img src= "./src/img/Logo.png" class="logo" alt="fake logo">
     <nav>
         <a href="./src/myResume.html">Resume</a>
         <a>About Me</a>
@@ -21,7 +20,7 @@
     </nav>
    </header>
    <main>
-    <img src="myProfilePic.jpeg" id="profile-pic" alt="Headshot of Me">
+    <img src="./src/img/myProfilePic.jpeg" id="profile-pic" alt="Headshot of Me">
     <h1>Hayden Garrett Robertson</h1>
     <h2>Student of Web Development</h2>
     <button id="portfolio"><a href="./src/Portfolio.html" target="blank">Portfolio</a></button>.
