--- a/myPortfolio/src/Dashboard.html
+++ b/myPortfolio/src/Dashboard.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="Dashboard-styles.css">
+  <link rel="stylesheet" href="./styles/Dashboard-styles.css">
 </head>
  <body>
-     <a href="./dashboard_background.jpg"></a>
 <main>
     <a class="weatherwidget-io" href="https://forecast7.com/en/33d58n101d86/lubbock/?unit=us" 
        data-label_1="LUBBOCK" 
