--- a/myPortfolio/src/blog.html
+++ b/myPortfolio/src/blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="./blog-styles.css">
+  <link rel="stylesheet" href="./styles/blog-styles.css">
   <title>My Blog</title>
 </head>
  <body>
