--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./src/styles/style.css">
+  <link rel="stylesheet" href="./src/styles/animate.css-master/animate.css">
   <title>My Portfolio</title>
 </head>
   <body>
@@ -13,15 +14,15 @@
    <header>
     <img src= "./src/img/Logo.png" class="logo" alt="fake logo">
     <nav>
-        <a href="./src/myResume.html">Resume</a>
-        <a>About Me</a>
-        <a href="./src/blog.html">My Blog</a>
-        <a class="has-border">Contact Me</a>
+        <a href="./src/myResume.html" class="animated bounce infinite">Resume</a>
+        <a class="animated bounce infinite">About Me</a>
+        <a class="animated bounce infinite" href="./src/blog.html">My Blog</a>
+        <a class="has-border animated bounce infinite">Contact Me</a>
     </nav>
    </header>
    <main>
     <img src="./src/img/myProfilePic.jpeg" id="profile-pic" alt="Headshot of Me">
-    <h1>Hayden Garrett Robertson</h1>
+    <h1 class="animated bounce">Hayden Garrett Robertson</h1>
     <h2>Student of Web Development</h2>
     <button id="portfolio"><a href="./src/Portfolio.html" target="blank">Portfolio</a></button>.
    </main>
