--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -22,7 +22,7 @@
    </header>
    <main>
     <img src="./src/img/myProfilePic.jpeg" id="profile-pic" alt="Headshot of Me">
-    <h1 class="animated bounce">Hayden Garrett Robertson</h1>
+    <h1 class="animated bounce slow">Hayden Garrett Robertson</h1>
     <h2>Student of Web Development</h2>
     <button id="portfolio"><a href="./src/Portfolio.html" target="blank">Portfolio</a></button>.
    </main>
