--- a/myPortfolio/src/Portfolio.html
+++ b/myPortfolio/src/Portfolio.html
@@ -4,14 +4,38 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <link rel="stylesheet" href="./styles/portfolio.css">
      <title>Portfolio</title>
     </head>
     <body>
-        <a href="./Dashboard.html">
+    <header>
+        <a href="./Dashboard.html" class="project1">
             Dashboard
         </a>
-        <a href="./hair.html">
+        <a href="./hair.html" class="project2">
             hair
         </a>
+        <a href="./nasa.html" class="project3">
+            nasa
+        </a>
+    </header>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CICIOJqEb5c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+    <form>
+        <br>
+        <label>Email :</label>
+        <input type="text" name="email"/>
+        <br>
+        <label>Name :</label>
+        <input type="text" name="name"/>
+        <br>
+        <label>Location :</label>
+        <input type="text" name="location"/>
+        <br>
+        <label>Message :</label>
+        <input type="text" name="message"/>
+        <br>
+        <input type="reset" value="reset"/>
+        <br>
+        <input type="submit" value="submit"/>
     </body>
 </html>
