--- a/myPortfolio/index.html
+++ b/myPortfolio/index.html
@@ -15,7 +15,7 @@
     <img src= "./src/img/Logo.png" class="logo" alt="fake logo">
     <nav>
         <a href="./src/myResume.html" class="animated bounce infinite">Resume</a>
-        <a class="animated bounce infinite">About Me</a>
+        <a href="./src/about.html" class="animated bounce infinite">About Me</a>
         <a class="animated bounce infinite" href="./src/blog.html">My Blog</a>
         <a class="has-border animated bounce infinite">Contact Me</a>
     </nav>
