forgot inline lol

--- a/myPortfolio/src/about.html
+++ b/myPortfolio/src/about.html
@@ -19,24 +19,24 @@
             Who Am I?
         </h1>
         <p class="info">
-            Mauris mi sem, venenatis sit amet finibus ultrices, faucibus ac enim. Donec accumsan erat lacus, nec malesuada purus blandit id. Praesent commodo mauris id quam facilisis sodales. Quisque sapien massa, laoreet vel pulvinar volutpat, porttitor eu nulla. Maecenas mattis erat non lacinia tempus. Nulla cursus ligula nec arcu luctus venenatis. Donec ac dictum urna. Cras non velit lacus. Aliquam vel suscipit metus. Proin sagittis neque at orci efficitur blandit. Sed pharetra quam vel est egestas facilisis. Etiam quis porttitor lorem, blandit condimentum orci.
+            Mauris mi sem, <em>venenatis</em> sit amet finibus ultrices, faucibus ac enim. Donec accumsan erat lacus, nec malesuada purus blandit id. Praesent commodo mauris id quam facilisis sodales. Quisque sapien massa, laoreet vel pulvinar volutpat, porttitor eu nulla. Maecenas mattis erat non lacinia tempus. Nulla cursus ligula nec arcu luctus venenatis. Donec ac dictum urna. Cras non velit lacus. Aliquam vel suscipit metus. Proin sagittis neque at orci efficitur blandit. Sed pharetra quam vel est egestas facilisis. Etiam quis porttitor lorem, blandit condimentum orci.
         </p>
         <div class="quote">
             "Phasellus eros diam, convallis eu urna at, egestas ultrices erat. Vestibulum semper varius tortor dignissim placerat. Fusce pharetra diam at nulla vehicula ullamcorper." 
         </div>
         <ol class="qual">
             <li>
-                Duis eget mollis
+                <em>Duis eget mollis</em>
             </li>
             <li>
-                Duis eget mollis
+                <b>Duis eget mollis</b>
             </li>
             <li>
-                Duis eget mollis
+                <u>Duis eget mollis</u>
             </li>
         </ol>
         <form class="form">
-           <strong> I'll contact you!</strong>
+           <strong> I'll contact YOU!</strong>
             <br>
             <label>Email :</label>
             <input type="text" name="email"/>
