--- a/myPortfolio/src/Portfolio.html
+++ b/myPortfolio/src/Portfolio.html
@@ -13,10 +13,13 @@
             Dashboard
         </a>
         <a href="./hair.html" class="project2">
-            hair
+            Hair
         </a>
         <a href="./nasa.html" class="project3">
-            nasa
+            Nasa
+        </a>
+        <a href="/Checkpoint2_BaconIpsum/src/Bacon.html">
+            Bacon Ipsum
         </a>
     </header>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/CICIOJqEb5c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
