--- a/myPortfolio/src/Dashboard.html
+++ b/myPortfolio/src/Dashboard.html
@@ -97,11 +97,18 @@
       
         </div>
       </div>
-      <div class="TO-DO">
-          <button type="button" class="Wash"> Wash Clothes</button>
-          <button type="button" class="Study">Study</button>
-          <button type="button" class="Budget">Manage Budget</button>
-          <button type="button" class="Work">Work on dashboard</button>
+      <ul class="TO-DO">
+          <li class="item">Study</li>
+          <li class="item">Work on dashboard</li>
+      </ul>
+    <form id="newItemForm">
+      <input type="text" id="itemField" placeholder="Item" />
+      <input type="submit" id="add" value="add" />
+    </form>
+  </div>
+  <script src="/jquery-3.4.1.min.js"></script>
+  <script src="./To-do.js"></script>
       </div>
 </main>
  </body>
+ </html>
